# libstats

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  eslint.config.js  jsconfig.json  package.json  pnpm-lock.yaml  release.config.js  rustfmt.toml  script.sh  tsconfig.json
.cargo/: config.toml
.github/workflows/: CI.yml  build.yml  ci.yml
.husky/: pre-commit
lib/: index.cjs  index.d.cts  index.d.ts  index.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/libstats-aarch64-apple-darwin/: README.md  package.json
npm/libstats-aarch64-pc-windows-msvc/: README.md  package.json
npm/libstats-aarch64-unknown-linux-musl/: README.md  package.json
npm/libstats-x86_64-apple-darwin/: README.md  package.json
npm/libstats-x86_64-pc-windows-msvc/: README.md  package.json
npm/libstats-x86_64-unknown-linux-musl/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: generate-release-commit.sh  publish.sh  verify-release.sh
src/: core.rs  lib.rs
test/: index.test.js
